Test author and summary tags on posts

--- a/_posts/2024-03-27-basic.md
+++ b/_posts/2024-03-27-basic.md
@@ -1,6 +1,8 @@
 ---
 title: An Abandoned Futurist Short Story
 layout: post
+authors: John Doe
+summary: This post has a custom summary tag. This helps describe the post on the blog page.
 ---
 
 Thomas looked at the valley. The pit of it was crystal blue water, shimmering beneath the summer sun. Then, around it, soft green prarie grass, which slowly gave way to the dark evergreen forest as the altitude rose. The tree line then starts to break, interrupted by deep gray and brown of the rock face, then grass and rock replaced the trees, and finally, white snow – stubbornly present in the height of the summer – capped the peaks. 
